--- a/src/app/css/switch.less
+++ b/src/app/css/switch.less
@@ -7,7 +7,7 @@
 @sw-indicator-off: #900;
 */
 
-// alernate color
+// alternate color
 @sw-color-1: #21212f;
 @sw-color-2: lighten(spin(@sw-color-1, 30%), 5%);
 @sw-color-3: lighten(spin(@sw-color-2, 30%), 15%);
